Add Auth amplify

--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "build:prod": "expo prebuild && eas update --branch main"
   },
   "dependencies": {
+    "@aws-amplify/react-native": "^1.1.10",
+    "@aws-amplify/ui-react-native": "^2.5.3",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "aws-amplify": "^6.15.3",
     "expo": "~53.0.15",
     "expo-asset": "~11.1.6",
     "expo-audio": "~0.4.7",
@@ -32,26 +37,34 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.8",
     "expo-three": "^2.2.1",
+    "expo-updates": "~0.28.15",
     "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.11.1",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "three": "^0.166.0",
-    "three-stdlib": "^2.32.1",
-    "expo-updates": "~0.28.15"
+    "three-stdlib": "^2.32.1"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.16.1",
+    "@aws-amplify/backend-cli": "^1.8.0",
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "aws-cdk-lib": "^2.189.1",
+    "constructs": "^10.4.2",
+    "esbuild": "^0.25.6",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
-    "typescript": "~5.8.3"
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3"
   },
   "private": true
 }
