--- a/eas.json
+++ b/eas.json
@@ -19,7 +19,10 @@
       "android": {
         "buildType": "apk"
       },
-      "channel": "main"
+      "channel": "main",
+      "hooks": {
+        "pre-install": "bash -lc 'cd ios && rm -rf Pods Podfile.lock && pod install --repo-update'"
+      }
     }
   },
   "submit": {
