--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "esbuild": "^0.25.6",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "react-native-svg": "^15.12.1",
     "tsx": "^4.20.3",
     "typescript": "~5.8.3"
   },
