--- a/app.json
+++ b/app.json
@@ -58,6 +58,7 @@
     "runtimeVersion": "1.0.7",
     "updates": {
       "url": "https://u.expo.dev/87d19859-6b3f-4665-99fc-e47ffcb8b914"
-    }
+    },
+    "owner": "ready-to-dev"
   }
 }
