--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "build:prod": "expo prebuild && eas update --branch main"
+    "build:prod": "expo prebuild && eas update --branch main",
+    "eas-build-pre-install": "bash ./scripts/write-netrc.sh"
   },
   "dependencies": {
     "@aws-amplify/react-native": "^1.1.10",
