--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "convecta",
   "main": "expo-router/entry",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -23,7 +23,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "@rnmapbox/maps": "^10.1.41",
+    "@rnmapbox/maps": "^10.2.6",
     "aws-amplify": "^6.15.3",
     "expo": "~53.0.22",
     "expo-asset": "~11.1.7",
@@ -35,6 +35,7 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
+    "expo-location": "~18.1.6",
     "expo-router": "~5.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -55,8 +56,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "three": "^0.166.0",
-    "three-stdlib": "^2.32.1",
-    "expo-location": "~18.1.6"
+    "three-stdlib": "^2.32.1"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.16.1",
