--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "convecta",
   "main": "expo-router/entry",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -28,6 +28,7 @@
     "expo": "~53.0.22",
     "expo-asset": "~11.1.7",
     "expo-audio": "~0.4.9",
+    "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
@@ -49,6 +50,7 @@
     "react-native": "0.79.6",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
