--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "convecta",
-  "main": "expo-router/entry",
   "version": "1.0.13",
+  "private": true,
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
+    "reset-project": "node ./scripts/reset-project.js",
     "build:prod": "expo prebuild && eas update --branch main",
     "eas-build-pre-install": "bash ./scripts/write-netrc.sh"
   },
@@ -24,12 +25,13 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@rnmapbox/maps": "^10.2.6",
+
     "aws-amplify": "^6.15.3",
-    "expo": "~53.0.22",
+    "expo": "~53.0.23",
     "expo-asset": "~11.1.7",
     "expo-audio": "~0.4.9",
-    "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.11",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
     "expo-gl": "~15.1.7",
@@ -37,14 +39,15 @@
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
+    "expo-modules-core": "~2.5.0",
     "expo-router": "~5.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.11",
-    "expo-three": "^2.2.1",
     "expo-updates": "~0.28.17",
     "expo-web-browser": "~14.2.0",
+
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
@@ -54,9 +57,11 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "^15.12.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+
     "three": "^0.166.0",
     "three-stdlib": "^2.32.1"
   },
@@ -64,10 +69,6 @@
     "@aws-amplify/backend": "^1.16.1",
     "@aws-amplify/backend-cli": "^1.8.0",
     "@babel/core": "7.26.0",
-    "@babel/generator": "7.26.0",
-    "@babel/parser": "7.26.1",
-    "@babel/template": "7.25.9",
-    "@babel/traverse": "7.25.9",
     "@babel/types": "7.26.0",
     "@types/react": "~19.0.10",
     "aws-cdk-lib": "^2.189.1",
@@ -76,9 +77,7 @@
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "mapbox-gl": "^2.15.0",
-    "react-native-svg": "^15.12.1",
     "tsx": "^4.20.3",
     "typescript": "~5.8.3"
-  },
-  "private": true
+  }
 }
