--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "convecta",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "private": true,
   "main": "expo-router/entry",
   "scripts": {
@@ -25,7 +25,6 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@rnmapbox/maps": "^10.2.6",
-
     "aws-amplify": "^6.15.3",
     "expo": "~53.0.23",
     "expo-asset": "~11.1.7",
@@ -47,7 +46,6 @@
     "expo-system-ui": "~5.0.11",
     "expo-updates": "~0.28.17",
     "expo-web-browser": "~14.2.0",
-
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
@@ -57,11 +55,10 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "^15.12.1",
+    "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-
     "three": "^0.166.0",
     "three-stdlib": "^2.32.1"
   },
