--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@babel/types": "7.26.0",
     "@types/react": "~19.0.10",
     "aws-cdk-lib": "^2.189.1",
+    "babel-plugin-module-resolver": "^5.0.2",
     "constructs": "^10.4.2",
     "esbuild": "^0.25.6",
     "eslint": "^9.25.0",
