--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "convecta",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "private": true,
   "main": "expo-router/entry",
   "scripts": {
@@ -21,6 +21,7 @@
     "@mapbox/mapbox-gl-geocoder": "^5.1.2",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-ml-kit/text-recognition": "^2.0.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -36,6 +37,7 @@
     "expo-gl": "~15.1.7",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.1",
+    "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
     "expo-modules-core": "~2.5.0",
@@ -57,6 +59,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-vision-camera": "^4.7.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "three": "^0.166.0",
