--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
-    "expo-modules-core": "~2.5.0",
     "expo-router": "~5.1.7",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -51,6 +50,7 @@
     "expo-system-ui": "~5.0.11",
     "expo-updates": "~0.28.17",
     "expo-web-browser": "~14.2.0",
+    "mapbox-gl": "^2.15.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
@@ -71,8 +71,9 @@
   "devDependencies": {
     "@aws-amplify/backend": "^1.16.1",
     "@aws-amplify/backend-cli": "^1.8.0",
-    "@babel/core": "7.26.0",
-    "@babel/types": "7.26.0",
+    "@babel/core": "^7.23.0",
+    "@babel/generator": "^7.23.0",
+    "@babel/types": "^7.23.0",
     "@types/react": "~19.0.10",
     "aws-cdk-lib": "^2.189.1",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -80,8 +81,25 @@
     "esbuild": "^0.25.6",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
-    "mapbox-gl": "^2.15.0",
     "tsx": "^4.20.3",
     "typescript": "~5.8.3"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "@react-native-ml-kit/text-recognition",
+          "@aws-amplify/ui-react-core",
+          "@aws-amplify/ui-react-native",
+          "@mapbox/mapbox-gl-geocoder",
+          "@turf/boolean-point-in-polygon",
+          "@turf/buffer",
+          "@turf/helpers",
+          "three",
+          "three-stdlib"
+        ],
+        "listUnknownPackages": false
+      }
+    }
   }
 }
