add "expo-dev-client" to dependencies

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "esbuild": "^0.25.6",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "expo-dev-client": "^6.0.18",
     "tsx": "^4.20.3",
     "typescript": "~5.8.3"
   },
