Change project version to 1.3.0

--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "@turf/boolean-point-in-polygon": "^7.2.0",
     "@turf/buffer": "^7.2.0",
     "@turf/helpers": "^7.2.0",
-    "aws-amplify": "^6.15.3",
+    "aws-amplify": "^6.15.8",
     "expo": "~53.0.23",
     "expo-asset": "~11.1.7",
     "expo-audio": "~0.4.9",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.11",
     "expo-constants": "~17.1.7",
+    "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.2",
     "expo-gl": "~15.1.7",
     "expo-haptics": "~14.1.4",
