--- a/ios/convecta/Info.plist
+++ b/ios/convecta/Info.plist
@@ -31,6 +31,12 @@
           <string>com.yasi82.convecta</string>
         </array>
       </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>exp+convecta</string>
+        </array>
+      </dict>
     </array>
     <key>CFBundleVersion</key>
     <string>5</string>
