update version to 1.0.30

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "convecta",
-  "version": "1.0.29",
+  "version": "1.0.30",
   "private": true,
   "main": "expo-router/entry",
   "scripts": {
@@ -51,8 +51,8 @@
     "expo-updates": "~0.28.17",
     "expo-web-browser": "~14.2.0",
     "mapbox-gl": "^2.15.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "0.79.6",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
@@ -74,14 +74,13 @@
     "@babel/core": "^7.23.0",
     "@babel/generator": "^7.23.0",
     "@babel/types": "^7.23.0",
-    "@types/react": "~19.0.10",
+    "@types/react": "^18.3.0",
     "aws-cdk-lib": "^2.189.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "constructs": "^10.4.2",
     "esbuild": "^0.25.6",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
-    "expo-dev-client": "^6.0.18",
     "tsx": "^4.20.3",
     "typescript": "~5.8.3"
   },
