--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@aws-amplify/ui-react-core": "^3.4.3",
     "@aws-amplify/ui-react-native": "^2.6.0",
     "@expo/vector-icons": "^14.1.0",
+
     "@mapbox/mapbox-gl-geocoder": "^5.1.2",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
@@ -29,42 +30,47 @@
     "@turf/buffer": "^7.2.0",
     "@turf/helpers": "^7.2.0",
     "aws-amplify": "^6.15.8",
-    "expo": "~53.0.23",
-    "expo-asset": "~11.1.7",
-    "expo-audio": "~0.4.9",
+
+    "expo": "~54.0.7",
+
+    "expo-asset": "~12.0.8",
+    "expo-audio": "~1.0.13",
     "expo-blur": "~14.1.5",
-    "expo-camera": "~16.1.11",
-    "expo-constants": "~17.1.7",
+    "expo-camera": "~17.0.9",
+    "expo-constants": "~18.0.8",
     "expo-dev-client": "~5.2.4",
-    "expo-font": "~13.3.2",
+    "expo-font": "~14.0.8",
     "expo-gl": "~15.1.7",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.4.1",
-    "expo-image-picker": "~16.1.4",
+    "expo-image": "~3.0.8",
+    "expo-image-picker": "~17.0.8",
     "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
     "expo-router": "~5.1.7",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.11",
-    "expo-updates": "~0.28.17",
+    "expo-updates": "~29.0.10",
     "expo-web-browser": "~14.2.0",
+
     "mapbox-gl": "^2.15.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.6",
-    "react-native-gesture-handler": "~2.24.0",
+
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-qrcode-svg": "^6.3.15",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vision-camera": "^4.7.2",
-    "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-web": "~0.21.0",
+    "react-native-webview": "13.15.0",
+
     "three": "^0.166.0",
     "three-stdlib": "^2.32.1"
   },
@@ -74,7 +80,9 @@
     "@babel/core": "^7.23.0",
     "@babel/generator": "^7.23.0",
     "@babel/types": "^7.23.0",
-    "@types/react": "^19.0.0",
+
+    "@types/react": "~19.1.0",
+
     "aws-cdk-lib": "^2.189.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "constructs": "^10.4.2",
@@ -82,7 +90,8 @@
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "tsx": "^4.20.3",
-    "typescript": "~5.8.3"
+
+    "typescript": "~5.9.2"
   },
   "expo": {
     "doctor": {
