--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-blur": "~14.1.5",
     "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.8",
+    "expo-dev-client": "~6.0.18",
     "expo-font": "~14.0.8",
     "expo-gl": "~15.1.7",
     "expo-haptics": "~14.1.4",
