--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "expo-image": "~3.0.8",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~7.1.7",
+    "expo-local-authentication": "~17.0.8",
     "expo-location": "~18.1.6",
     "expo-router": "~5.1.7",
     "expo-splash-screen": "~31.0.10",
