--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "convecta",
-  "version": "1.0.30",
+  "version": "1.0.31",
   "private": true,
   "main": "expo-router/entry",
   "scripts": {
@@ -45,6 +45,7 @@
     "expo-local-authentication": "~17.0.8",
     "expo-location": "~18.1.6",
     "expo-router": "~5.1.7",
+    "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~0.4.5",
@@ -56,6 +57,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
+    "@react-native-ml-kit/text-recognition": "^1.5.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~4.1.0",
